--- a/Views/HomeView.axaml
+++ b/Views/HomeView.axaml
@@ -317,11 +317,18 @@
 				<Ellipse Width="30" Height="30" Stroke="Black" StrokeThickness="2" Fill="{Binding TxStatus}" Margin="10,0"/>
                 <TextBlock Text="TX" VerticalAlignment="Center" FontSize="16" />
             </StackPanel>
-            <StackPanel Orientation="Horizontal" Margin="0,5,10,0">
+            <StackPanel Orientation="Horizontal" Margin="0,5,10,20">
 				<Ellipse Width="30" Height="30" Stroke="Black" StrokeThickness="2" Fill="{Binding TxStatus}" Margin="10,0"/>
                 <TextBlock Text="RX" VerticalAlignment="Center" FontSize="16" />
             </StackPanel>
         </StackPanel>
+
+         <StackPanel Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Center">
+			 <StackPanel Margin="0,10,10,0">
+				 <Button IsEnabled="{Binding Ft2400Enabled}" IsVisible="{Binding Ft2400Visible}" Content="2400ft" FontSize="14" HorizontalAlignment="Center" VerticalContentAlignment="Center" Width="65" Height="50" Background="{Binding Ft2400Background}" Command="{Binding Ft2400Clicked}"/>
+                 <Button IsEnabled="{Binding Ft3000Enabled}" IsVisible="{Binding Ft3000Visible}" Content="3000ft" FontSize="14" HorizontalAlignment="Center" VerticalContentAlignment="Center" Width="65" Height="50" Background="{Binding Ft3000Background}" Command="{Binding Ft3000Clicked}"/>
+             </StackPanel>
+         </StackPanel>
         
         <TextBox x:Name="LogTextBox" Text="{Binding LogText, Mode=OneWay}" Grid.Row="4" Background="White" Margin="10,0,5,10" IsReadOnly="True" TextWrapping="Wrap" AcceptsReturn="True" av:ScrollViewer.VerticalScrollBarVisibility="Auto" ></TextBox>
       </Grid>
