--- a/Views/HomeView.axaml
+++ b/Views/HomeView.axaml
@@ -39,7 +39,7 @@
                     </Button>
                 </Border>
                 <Border BorderThickness="5" BorderBrush="DarkGray" Margin="5,0" Height="60">
-                  <Button x:Name="lvicc2Pg" Width="60" Height="50" Background="{Binding Lvicc2PgBackground}" Command="{Binding GoToICC2Command}">
+                  <Button x:Name="lvicc2Pg" Width="60" Height="50" Background="{Binding Lvicc2PgBackground}" Command="{Binding GoToICC2Command}" IsEnabled="{Binding AlsfMode}">
 					    <Grid>
 						    <TextBlock Text="2" FontSize="16" HorizontalAlignment="Center" VerticalAlignment="Center"/>
                             <Ellipse Width="10" Height="10" Fill="Orange" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0,0,-5,-5" IsVisible="{Binding Lvicc2PgStatus}" />
@@ -55,7 +55,7 @@
                     </Button>
                 </Border>
                 <Border BorderThickness="5" BorderBrush="DarkGray" Margin="5,0" Height="60">
-                  <Button x:Name="lvicc4Pg" Width="60" Height="50" Background="{Binding Lvicc4PgBackground}" Command="{Binding GoToICC4Command}">
+                  <Button x:Name="lvicc4Pg" Width="60" Height="50" Background="{Binding Lvicc4PgBackground}" Command="{Binding GoToICC4Command}" IsEnabled="{Binding AlsfMode}">
 					    <Grid>
 						    <TextBlock Text="4" FontSize="16" HorizontalAlignment="Center" VerticalAlignment="Center"/>
                             <Ellipse Width="10" Height="10" Fill="Orange" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0,0,-5,-5" IsVisible="{Binding Lvicc4PgStatus}" />
@@ -63,7 +63,7 @@
                     </Button>
                 </Border>
                 <Border BorderThickness="5" BorderBrush="DarkGray" Margin="5,0" Height="60">
-                  <Button x:Name="lvicc5Pg" Width="60" Height="50" Background="{Binding Lvicc5PgBackground}" Command="{Binding GoToICC5Command}">
+                  <Button x:Name="lvicc5Pg" Width="60" Height="50" Background="{Binding Lvicc5PgBackground}" Command="{Binding GoToICC5Command}"> 
 					    <Grid>
 						    <TextBlock Text="5" FontSize="16" HorizontalAlignment="Center" VerticalAlignment="Center"/>
                             <Ellipse Width="10" Height="10" Fill="Orange" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0,0,-5,-5" IsVisible="{Binding Lvicc5PgStatus}" />
@@ -71,7 +71,7 @@
                     </Button>
                 </Border>
                 <Border BorderThickness="5" BorderBrush="DarkGray" Margin="5,0" Height="60">
-                  <Button x:Name="lvicc6Pg" Width="60" Height="50" Background="{Binding Lvicc6PgBackground}" Command="{Binding GoToICC6Command}">
+                  <Button x:Name="lvicc6Pg" Width="60" Height="50" Background="{Binding Lvicc6PgBackground}" Command="{Binding GoToICC6Command}" IsEnabled="{Binding AlsfMode}">
 					    <Grid>
 						    <TextBlock Text="6" FontSize="16" HorizontalAlignment="Center" VerticalAlignment="Center"/>
                             <Ellipse Width="10" Height="10" Fill="Orange" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0,0,-5,-5" IsVisible="{Binding Lvicc6PgStatus}" />
@@ -89,7 +89,7 @@
               </StackPanel>
               <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,10">
                 <Border BorderThickness="5" BorderBrush="DarkGray" Margin="5,0" Height="60">
-                  <Button x:Name="lvicc8Pg" Width="60" Height="50" Background="{Binding Lvicc8PgBackground}" Command="{Binding GoToICC8Command}">
+                  <Button x:Name="lvicc8Pg" Width="60" Height="50" Background="{Binding Lvicc8PgBackground}" Command="{Binding GoToICC8Command}" IsEnabled="{Binding AlsfMode}">
 					    <Grid>
 						    <TextBlock Text="8" FontSize="16" HorizontalAlignment="Center" VerticalAlignment="Center"/>
                             <Ellipse Width="10" Height="10" Fill="Orange" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0,0,-5,-5" IsVisible="{Binding Lvicc8PgStatus}" />
@@ -105,7 +105,7 @@
                     </Button>
                 </Border>
                 <Border BorderThickness="5" BorderBrush="DarkGray" Margin="5,0" Height="60">
-                  <Button x:Name="lvicc10Pg" Width="60" Height="50" Background="{Binding Lvicc10PgBackground}" Command="{Binding GoToICC10Command}">
+                  <Button x:Name="lvicc10Pg" Width="60" Height="50" Background="{Binding Lvicc10PgBackground}" Command="{Binding GoToICC10Command}" IsEnabled="{Binding AlsfMode}">
 					    <Grid>
 						    <TextBlock Text="10" FontSize="16" HorizontalAlignment="Center" VerticalAlignment="Center"/>
                             <Ellipse Width="10" Height="10" Fill="Orange" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0,0,-5,-5" IsVisible="{Binding Lvicc10PgStatus}" />
@@ -121,7 +121,7 @@
                     </Button>
                 </Border>
                 <Border BorderThickness="5" BorderBrush="DarkGray" Margin="5,0" Height="60">
-                  <Button x:Name="lvicc12Pg" Width="60" Height="50" Background="{Binding Lvicc12PgBackground}" Command="{Binding GoToICC12Command}">
+                  <Button x:Name="lvicc12Pg" Width="60" Height="50" Background="{Binding Lvicc12PgBackground}" Command="{Binding GoToICC12Command}" IsEnabled="{Binding AlsfMode}">
 					    <Grid>
 						    <TextBlock Text="12" FontSize="16" HorizontalAlignment="Center" VerticalAlignment="Center"/>
                             <Ellipse Width="10" Height="10" Fill="Orange" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0,0,-5,-5" IsVisible="{Binding Lvicc12PgStatus}" />
@@ -137,7 +137,7 @@
                     </Button>
                 </Border>
                 <Border BorderThickness="5" BorderBrush="DarkGray" Margin="5,0" Height="60">
-                  <Button x:Name="lvicc14Pg" Width="60" Height="50" Background="{Binding Lvicc14PgBackground}" Command="{Binding GoToICC14Command}">
+                  <Button x:Name="lvicc14Pg" Width="60" Height="50" Background="{Binding Lvicc14PgBackground}" Command="{Binding GoToICC14Command}" IsEnabled="{Binding AlsfMode}">
 					    <Grid>
 						    <TextBlock Text="14" FontSize="16" HorizontalAlignment="Center" VerticalAlignment="Center"/>
                             <Ellipse Width="10" Height="10" Fill="Orange" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0,0,-5,-5" IsVisible="{Binding Lvicc14PgStatus}" />
@@ -154,15 +154,15 @@
                         </Grid>	
                     </Button>
                 </Border>
-                <Border BorderThickness="5" BorderBrush="DarkGray" Margin="5,0" Height="60">
-                  <Button x:Name="lvicc16Pg" Width="60" Height="50" Background="{Binding Lvicc16PgBackground}" Command="{Binding GoToICC16Command}">
+                <Border BorderThickness="5" BorderBrush="DarkGray" Margin="5,0" Height="60" IsVisible="{Binding Ft3000Mode}">
+                  <Button x:Name="lvicc16Pg" Width="60" Height="50" Background="{Binding Lvicc16PgBackground}" Command="{Binding GoToICC16Command}" IsEnabled="{Binding AlsfMode}">
 					    <Grid>
 						    <TextBlock Text="16" FontSize="16" HorizontalAlignment="Center" VerticalAlignment="Center"/>
                             <Ellipse Width="10" Height="10" Fill="Orange" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0,0,-5,-5" IsVisible="{Binding Lvicc16PgStatus}" />
                         </Grid>	
                     </Button>
                 </Border>
-                <Border BorderThickness="5" BorderBrush="DarkGray" Margin="5,0" Height="60" IsVisible="{Binding AlsfMode}">
+                <Border BorderThickness="5" BorderBrush="DarkGray" Margin="5,0" Height="60" IsVisible="{Binding Ft3000Mode}">
                   <Button x:Name="lvicc17Pg" Width="60" Height="50" Background="{Binding Lvicc17PgBackground}" Command="{Binding GoToICC17Command}">
 					    <Grid>
 						    <TextBlock Text="17" FontSize="16" HorizontalAlignment="Center" VerticalAlignment="Center"/>
@@ -170,15 +170,15 @@
                         </Grid>	
                     </Button>
                 </Border>
-                <Border BorderThickness="5" BorderBrush="DarkGray" Margin="5,0" Height="60" IsVisible="{Binding AlsfMode}">
-                  <Button x:Name="lvicc18Pg" Width="60" Height="50" Background="{Binding Lvicc18PgBackground}" Command="{Binding GoToICC18Command}">
+                <Border BorderThickness="5" BorderBrush="DarkGray" Margin="5,0" Height="60" IsVisible="{Binding Ft3000Mode}">
+                  <Button x:Name="lvicc18Pg" Width="60" Height="50" Background="{Binding Lvicc18PgBackground}" Command="{Binding GoToICC18Command}" IsEnabled="{Binding AlsfMode}">
 					    <Grid>
 						    <TextBlock Text="18" FontSize="16" HorizontalAlignment="Center" VerticalAlignment="Center"/>
                             <Ellipse Width="10" Height="10" Fill="Orange" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0,0,-5,-5" IsVisible="{Binding Lvicc18PgStatus}" />
                         </Grid>	
                     </Button>
                 </Border>
-                <Border BorderThickness="5" BorderBrush="DarkGray" Margin="5,0" Height="60" IsVisible="{Binding AlsfMode}">
+                <Border BorderThickness="5" BorderBrush="DarkGray" Margin="5,0" Height="60" IsVisible="{Binding Ft3000Mode}">
                   <Button x:Name="lvicc19Pg" Width="60" Height="50" Background="{Binding Lvicc19PgBackground}" Command="{Binding GoToICC19Command}">
 					    <Grid>
 						    <TextBlock Text="19" FontSize="16" HorizontalAlignment="Center" VerticalAlignment="Center"/>
@@ -186,15 +186,15 @@
                         </Grid>	
                     </Button>
                 </Border>
-                <Border BorderThickness="5" BorderBrush="DarkGray" Margin="5,0" Height="60" IsVisible="{Binding AlsfMode}">
-                  <Button x:Name="lvicc20Pg" Width="60" Height="50" Background="{Binding Lvicc20PgBackground}" Command="{Binding GoToICC20Command}">
+                <Border BorderThickness="5" BorderBrush="DarkGray" Margin="5,0" Height="60" IsVisible="{Binding Ft3000Mode}">
+                  <Button x:Name="lvicc20Pg" Width="60" Height="50" Background="{Binding Lvicc20PgBackground}" Command="{Binding GoToICC20Command}" IsEnabled="{Binding AlsfMode}">
 					    <Grid>
 						    <TextBlock Text="20" FontSize="16" HorizontalAlignment="Center" VerticalAlignment="Center"/>
                             <Ellipse Width="10" Height="10" Fill="Orange" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0,0,-5,-5" IsVisible="{Binding Lvicc20PgStatus}" />
                         </Grid>	
                     </Button>
                 </Border>
-                <Border BorderThickness="5" BorderBrush="DarkGray" Margin="5,0" Height="60" IsVisible="{Binding AlsfMode}">
+                <Border BorderThickness="5" BorderBrush="DarkGray" Margin="5,0" Height="60" IsVisible="{Binding Ft3000Mode}">
                   <Button x:Name="lvicc21Pg" Width="60" Height="50" Background="{Binding Lvicc21PgBackground}" Command="{Binding GoToICC21Command}">
 					    <Grid>
 						    <TextBlock Text="21" FontSize="16" HorizontalAlignment="Center" VerticalAlignment="Center"/>
